Add --add-options test and fix for the plugin
--add-options might add items to the vmoptions internal resource, which
might already be present in the base image. Handle this in the plugin
and verify it in a test.